# Kimbo

./: Cargo.toml  README.md
feature tests/: testing format.txt
feature tests/counter move heuristic/: summary.txt  with.txt  without.txt
feature tests/hash pruning bounds/: depth_minus_exact_relaxed.txt  depth_minus_exact_strict.txt  depth_relaxed.txt  depth_strict.txt  summary.txt
feature tests/history heuristic/: with.txt  without.txt
feature tests/incremental move sorting/: Iterate.txt  Presort.txt  Summary.txt
feature tests/pawn eval/: none.txt  with.txt
feature tests/pseudo vs legal/: legal 2.txt  legal.txt  pseudo 2.txt  pseudo.txt  summary.txt
feature tests/pvs/: No PVS.txt  PVS v1.txt  PVS v2.txt  Summary.txt
feature tests/staged move gen/: staged.txt  summary.txt  unstaged.txt
src/: lib.rs  macros.rs  main.rs  uci.rs
src/engine/: consts.rs  eval.rs  limits.rs  mod.rs  moves.rs  perft.rs  pst.rs  qsearch.rs  search.rs  sorting.rs  transposition.rs  util.rs  zobrist.rs
src/eval/: mod.rs  tuner.rs  tuner_eval.rs  vals.rs
src/hash/: mod.rs  pawn.rs  perft.rs  search.rs
src/io/: errors.rs  fen.rs  info.rs  inputs.rs  mod.rs  outputs.rs  uci.rs
src/perft/: go.rs  mod.rs  transposition.rs
src/position/: attacks.rs  consts.rs  eval.rs  makemove.rs  mobility.rs  mod.rs  movegen.rs  perft.rs  zobrist.rs
src/search/: debug.rs  go.rs  mod.rs  negamax.rs  nsearch.rs  pruning.rs  qsearch.rs  sorting.rs  timings.rs
src/state/: consts.rs  mod.rs  movegen.rs  position.rs
src/tables/: countermove.rs  hash.rs  history.rs  killer.rs  mod.rs  pawn.rs  (+2 more)
(+2 files in other folders)
