[package]
name = "kimbo"
version = "0.1.4"
authors = ["Jamie Whiting"]
edition = "2021"
description = "Kimbo, a chess engine written in rust."

[dependencies]
kimbo_state = { git = "https://github.com/JacquesRW/kimbo_state" }
fastrand = "1.8.0"

[profile.release.build-override]
opt-level = 3

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true
debug = false
incremental = false

[profile.dev]
opt-level = 3
overflow-checks = false